test/error/rtc/rtc1.rzy
// error: loop in connection graph for sub

component
  Dummy
    input
      in();
      
    output
      out();
      
  implementation elementary
    function in()
      out();
    end
  end

  Rtc1
    input
      in();
      
    output
      out();
      
  implementation elementary
    component
      sub : Dummy;
      
    function in()
      out();   //surpress errors or warnings about unused stuff
    end
    
    function sub.out()
      sub.in();  // this is a circle
    end

  end

